# PR1

./: Makefile  pyproject.toml
VD_games/: cli.py  engine.py
VD_games/games/: calc.py  gcd.py  prime.py  progression.py
VD_games/scripts/: VD_even.py  VD_main.py
