[project]
name = "pr1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]

[project.scripts]
VD_games = "VD_games.scripts.VD_games:main"
VD_even = "VD_games.scripts.VD_even:main"

